增加了agent编译，现在看内存貌似稳定住了。还需要继续观察。